language/move-lang/tests/move_check/parser/address_not_hex.exp
error: 

   ┌── tests/move_check/parsing/address_not_hex.move:1:9 ───
   │
 1 │ address 1:
   │         ^ Unrecognized Token: 1
   ·
 1 │ address 1:
   │         - Expected:  "!=", "%", "&", "&&", "(", "()", ")", "*", "+", ",", "-", ".", "/", ":", "::", ";", "<", "<=", "=", "==", ">", ">=", "^", "acquires", "as", "else", "{", "|", "||", "}", r#"0[xX][0-9a-fA-F]+"#, r#"[a-zA-Z_][a-zA-Z0-9_]*"#,
   │

